yarn add bootstrap and fontawsome

--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "Tiscord",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.14.0",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "bootstrap": "^4.5.2",
     "stimulus": "^1.1.1",
     "turbolinks": "^5.2.0"
   },
