--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
     "bootstrap": "^4.5.2",
+    "cable_ready": "^4.3.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "stimulus": "^1.1.1",
+    "stimulus_reflex": "^3.3.0-pre2",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
